--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -9,7 +9,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -54,7 +54,7 @@
                 android:id="@+id/rating_Main"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="32dp"
+                android:layout_marginEnd="40dp"
                 android:text="4.5"
                 android:textColor="#59AD92"
                 android:textSize="18sp"
@@ -66,7 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="40dp"
+                android:layout_marginEnd="48dp"
                 android:text="(1050)"
                 android:textColor="#59AD92"
                 android:textSize="14sp"
@@ -77,7 +77,7 @@
                 android:id="@+id/namePlaceDetail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="16dp"
                 android:text="Filosofi Kopi"
                 android:textColor="#59AD92"
@@ -90,7 +90,7 @@
                 android:id="@+id/addressPlaceDetail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="8dp"
                 android:text="Jl. Pandhawa No.1/17, Tegal Rejo"
                 android:textColor="#59AD92"
@@ -103,7 +103,7 @@
                 android:id="@+id/regionPlaceDetail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="8dp"
                 android:text="Kec. Ngaglik"
                 android:textColor="#59AD92"
@@ -129,9 +129,9 @@
                 android:id="@+id/additionalInfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="32dp"
                 android:text="Additional Info"
                 android:textColor="#59AD92"
                 android:textSize="18sp"
@@ -144,21 +144,19 @@
                 android:id="@+id/iv_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="8dp"
                 android:src="@drawable/baseline_location_on_24"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/additionalInfo"
-                tools:layout_editor_absoluteX="45dp"
-                tools:layout_editor_absoluteY="411dp" />
+                app:layout_constraintTop_toBottomOf="@+id/additionalInfo" />
 
             <TextView
                 android:id="@+id/tv_alamat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="60dp"
+                android:layout_marginStart="80dp"
                 android:layout_marginTop="12dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="32dp"
                 android:text="Alamatnya"
                 android:textColor="#8F8F8F"
                 android:textSize="12sp"
@@ -171,7 +169,7 @@
                 android:id="@+id/iv_phone"
                 android:layout_width="26dp"
                 android:layout_height="24dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="10dp"
                 android:src="@drawable/baseline_phone_24"
                 app:layout_constraintStart_toStartOf="parent"
@@ -181,9 +179,9 @@
                 android:id="@+id/tv_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="60dp"
+                android:layout_marginStart="80dp"
                 android:layout_marginTop="2dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="32dp"
                 android:text="0812xxxxxxx"
                 android:textColor="#8F8F8F"
                 android:textSize="12sp"
@@ -195,7 +193,7 @@
                 android:id="@+id/iv_time"
                 android:layout_width="26dp"
                 android:layout_height="24dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="8dp"
                 android:src="@drawable/baseline_access_time_24"
                 app:layout_constraintStart_toStartOf="parent"
@@ -205,7 +203,7 @@
                 android:id="@+id/tv_open"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="2dp"
                 android:text="Open"
                 android:textColor="#59AD92"
@@ -228,7 +226,7 @@
                 android:id="@+id/tvCategory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="24dp"
                 android:text="Category"
                 android:textColor="#59AD92"
@@ -241,7 +239,7 @@
                 android:id="@+id/tvListCategory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="4dp"
                 android:text="#CoffeeShop"
                 android:textColor="#59AD92"
@@ -254,7 +252,7 @@
                 android:id="@+id/tvServiceOption"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="24dp"
                 android:text="Service Option"
                 android:textColor="#59AD92"
@@ -267,7 +265,7 @@
                 android:id="@+id/tvListServiceOption"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="4dp"
                 android:text="Delivery"
                 android:textColor="#59AD92"
@@ -281,7 +279,7 @@
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="24dp"
                 android:text="Reviews"
                 android:textColor="#59AD92"
@@ -294,9 +292,9 @@
                 android:id="@+id/rv_reviews"
                 android:layout_width="0dp"
                 android:layout_height="250dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="12dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="32dp"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/layout_bottom_menu"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -324,15 +322,13 @@
                         android:id="@+id/buttonMap"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
+                        android:layout_marginStart="48dp"
                         android:layout_marginTop="8dp"
-                        android:layout_marginEnd="16dp"
                         android:backgroundTint="#59AD92"
                         android:gravity="center"
                         android:paddingStart="90dp"
-                        android:paddingEnd="100dp"
+                        android:paddingEnd="60dp"
                         android:text="Guide Me There"
-                        app:layout_constraintEnd_toStartOf="@+id/buttonFavorite"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         tools:ignore="RtlSymmetry" />
@@ -343,7 +339,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginTop="20dp"
-                        android:layout_marginEnd="20dp"
+                        android:layout_marginEnd="48dp"
                         android:src="@drawable/baseline_favorite_border_24"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
