--- a/app/src/main/res/layout/fragment_logout.xml
+++ b/app/src/main/res/layout/fragment_logout.xml
@@ -42,7 +42,9 @@
                 android:layout_height="22dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="28dp"
+                android:layout_marginEnd="8dp"
                 android:src="@drawable/person"
+                app:layout_constraintEnd_toStartOf="@+id/textView6"
                 app:layout_constraintStart_toEndOf="@+id/circleImageView2"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -52,9 +54,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="9dp"
                 android:layout_marginBottom="28dp"
                 android:src="@drawable/baseline_local_post_office_24"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/textView7"
                 app:layout_constraintStart_toEndOf="@+id/circleImageView2"
                 app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
@@ -64,23 +68,28 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="28dp"
+                android:layout_marginEnd="137dp"
                 android:text="Andi Budi"
                 android:textColor="#59AD92"
                 android:textSize="17dp"
                 android:textStyle="normal"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView4"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:layout_marginEnd="49dp"
                 android:layout_marginBottom="28dp"
                 android:text="andibudi@gmail.com"
                 android:textColor="#59AD92"
                 android:textSize="17dp"
                 android:textStyle="normal"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView5" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
